WDSBT-227 - Fix sass @import deprecated functions

--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -1,5 +1,5 @@
-@import './abstracts';
-@import './base';
-@import './patterns/';
-@import './template-parts';
-@import './templates';
+@use 'abstracts';
+@use 'base';
+@use 'patterns';
+@use 'template-parts';
+@use 'templates';
