--- a/assets/scss/base/_index.scss
+++ b/assets/scss/base/_index.scss
@@ -1,4 +1,4 @@
 // 'base/' keeps files styling the base HTML elements.
-@import './global';
-@import './pagination';
-@import './forms';
+@use 'global';
+@use 'pagination';
+@use 'forms';
