--- a/assets/scss/blocks/core/navigation.scss
+++ b/assets/scss/blocks/core/navigation.scss
@@ -1,4 +1,4 @@
-@import '../../abstracts/responsive-mixins';
+@use '../../abstracts/responsive-mixins';
 
 /* -- Navigation -- */
 
@@ -256,7 +256,7 @@
 }
 
 /* Mobile only menu */
-@include responsive-max(833px) {
+@include responsive-mixins.responsive-max(833px) {
 	.is-root-container .header-container,
 	.site-header .header-container {
 		padding-left: 0 !important; /* stylelint-disable-line declaration-no-important */
@@ -268,7 +268,7 @@
 	}
 }
 
-@include responsive-min(834px) {
+@include responsive-mixins.responsive-min(834px) {
 	.wp-block-navigation__responsive-container-open:not(.always-shown) {
 		display: none !important; /* stylelint-disable-line declaration-no-important */
 	}
@@ -280,7 +280,7 @@
 }
 
 /* Remove the WordPress default for 600px */
-@include responsive-min(600px) {
+@include responsive-mixins.responsive-min(600px) {
 	.wp-block-navigation__responsive-container-open {
 		&:not(.always-shown) {
 			display: block;
