--- a/assets/scss/template-parts/_index.scss
+++ b/assets/scss/template-parts/_index.scss
@@ -1,3 +1,3 @@
 // 'template-parts/' houses styles for site editor template parts.
-@import './header';
-@import './footer';
+@use 'header';
+@use 'footer';
