--- a/assets/scss/template-parts/header.scss
+++ b/assets/scss/template-parts/header.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/responsive-mixins';
+
 /* -- Header -- */
 
 /* -- Header Search -- */
@@ -92,7 +94,7 @@
 	}
 }
 
-@include responsive-max(833px) {
+@include responsive-mixins.responsive-max(833px) {
 	.site-header {
 		.wp-block-search {
 			width: 100%;
