--- a/assets/scss/templates/404.scss
+++ b/assets/scss/templates/404.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/responsive-mixins';
+
 /* -- 404 -- */
 
 .error404 {
@@ -100,7 +102,7 @@
 		}
 	}
 
-	@include responsive-max(600px) {
+	@include responsive-mixins.responsive-max(600px) {
 		.not-found {
 			.error-title {
 				&::before {
