--- a/assets/scss/blocks/core/button.scss
+++ b/assets/scss/blocks/core/button.scss
@@ -9,10 +9,6 @@
 		position: relative;
 		z-index: 1;
 
-		&.rich-text {
-			min-width: 10rem !important; /* stylelint-disable-line declaration-no-important */
-		}
-
 		&:disabled,
 		&[disabled] {
 			cursor: not-allowed;
@@ -51,21 +47,53 @@
 	&.has-size-m {
 		.wp-block-button__link {
 			font-size: var(--wp--preset--font-size--s);
-			padding: 0.625rem 1.25rem 0.625rem 1.25rem;
+			padding: 0.625rem 1.25rem;
 		}
 	}
 
 	&.has-size-l {
 		.wp-block-button__link {
 			font-size: var(--wp--preset--font-size--m);
-			padding: 0.9375rem 1.25rem 0.9375rem 1.25rem;
+			padding: 0.9375rem 1.25rem;
 		}
 	}
 
 	&.has-size-xl {
 		.wp-block-button__link {
 			font-size: var(--wp--preset--font-size--l);
-			padding: 0.9375rem 1.25rem 0.9375rem 1.25rem;
+			padding: 0.9375rem 1.25rem;
+		}
+	}
+
+	&.has-arrow:not(.is-style-minimal):not(.is-style-text) {
+		.wp-block-button__link {
+			&::after {
+				mask: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMTYiIHZpZXdCb3g9IjAgMCAxNiAxNiIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTIgMTIuOTU0Nkw0LjU5NjE1IDguMDA3NDRMMiAzLjA0NTlMMTQgOC4wMDc0NEwyIDEyLjk1NDZaIiBmaWxsPSIjMTMxMzEzIi8+Cjwvc3ZnPgo=);
+			}
+
+			&:hover {
+				&::after {
+					filter: invert(1);
+				}
+			}
+		}
+	}
+
+	&.has-arrow {
+		.wp-block-button__link {
+			&::after {
+				content: '';
+				display: inline-block;
+				margin-left: 0.5em;
+				margin-right: 0;
+				width: 1em;
+				height: 1em;
+				mask: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMTYiIHZpZXdCb3g9IjAgMCAxNiAxNiIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTIgMTIuOTU0Nkw0LjU5NjE1IDguMDA3NDRMMiAzLjA0NTlMMTQgOC4wMDc0NEwyIDEyLjk1NDZaIiBmaWxsPSIjRkY2NjAwIi8+Cjwvc3ZnPgo=);
+				background-size: contain;
+				background-repeat: no-repeat;
+				background-color: currentcolor;
+				transition: filter 0.2s ease-in-out;
+			}
 		}
 	}
 }
