WDSBT-227 - Update styles to fix linters with stylelint 16

--- a/assets/scss/abstracts/utility.scss
+++ b/assets/scss/abstracts/utility.scss
@@ -87,10 +87,12 @@ figure[class*=' blur-'] {
 /* Header */
 
 .js-enabled {
+
 	.site-header {
 		position: sticky;
 		top: var(
-			--wp-admin--admin-bar--height, 0
+			--wp-admin--admin-bar--height,
+			0
 		) !important; /* stylelint-disable-line declaration-no-important */
 		transition: top 0.5s;
 		z-index: 100;
@@ -99,12 +101,14 @@ figure[class*=' blur-'] {
 
 /* Media Queries */
 @include responsive-mixins.responsive-max(600px) {
+
 	.is-style-hidden-mobile {
 		display: none !important; /* stylelint-disable-line declaration-no-important */
 	}
 }
 
 @include responsive-mixins.responsive-max(782px) {
+
 	.wp-block-columns.is-style-column-reverse {
 		flex-direction: column-reverse;
 	}
