--- a/assets/scss/blocks/core/tag-cloud.scss
+++ b/assets/scss/blocks/core/tag-cloud.scss
@@ -1,4 +1,23 @@
-/* -- tag-cloud -- */
+@use 'sass:map';
+
+$tag-cloud-colors: (
+	1: (
+		base: var(--wp--preset--color--primary-500),
+		hover: var(--wp--preset--color--primary-700),
+	),
+	2: (
+		base: var(--wp--preset--color--secondary-500),
+		hover: var(--wp--preset--color--secondary-700),
+	),
+	3: (
+		base: var(--wp--preset--color--tertiary-500),
+		hover: var(--wp--preset--color--tertiary-700),
+	),
+	4: (
+		base: var(--wp--preset--color--grey-500),
+		hover: var(--wp--preset--color--grey-700),
+	),
+);
 
 .wp-block-tag-cloud {
 	display: inline-block;
@@ -6,43 +25,16 @@
 	white-space: pre-wrap;
 
 	a {
-		&:nth-of-type(4n + 1) {
-			color: var(--wp--preset--color--primary-500);
 
-			&:hover,
-			&:active,
-			&:focus {
-				color: var(--wp--preset--color--primary-700);
-			}
-		}
+		@each $index, $colors in $tag-cloud-colors {
+			&:nth-of-type(4n + #{$index}) {
+				color: map.get($colors, base);
 
-		&:nth-of-type(4n + 2) {
-			color: var(--wp--preset--color--secondary-500);
-
-			&:hover,
-			&:active,
-			&:focus {
-				color: var(--wp--preset--color--secondary-700);
-			}
-		}
-
-		&:nth-of-type(4n + 3) {
-			color: var(--wp--preset--color--tertiary-500);
-
-			&:hover,
-			&:active,
-			&:focus {
-				color: var(--wp--preset--color--tertiary-700);
-			}
-		}
-
-		&:nth-of-type(4n + 4) {
-			color: var(--wp--preset--color--grey-500);
-
-			&:hover,
-			&:active,
-			&:focus {
-				color: var(--wp--preset--color--grey-700);
+				&:hover,
+				&:active,
+				&:focus {
+					color: map.get($colors, hover);
+				}
 			}
 		}
 	}
