--- a/assets/scss/blocks/core/file.scss
+++ b/assets/scss/blocks/core/file.scss
@@ -1,4 +1,5 @@
 @use '../../abstracts/responsive-mixins';
+/* stylelint-disable selector-class-pattern */
 
 /* -- file -- */
 
@@ -69,3 +70,4 @@
 		}
 	}
 }
+/* stylelint-enable selector-class-pattern */
