--- a/assets/scss/blocks/core/latest-comments.scss
+++ b/assets/scss/blocks/core/latest-comments.scss
@@ -1,3 +1,5 @@
+/* stylelint-disable selector-class-pattern, declaration-no-important */
+
 /* -- latest comments -- */
 
 .wp-block-latest-comments {
@@ -6,7 +8,7 @@
 	> * {
 		max-width: calc(
 			var(--wp--style--global--content-size) - 30%
-		) !important; /* stylelint-disable-line declaration-no-important */
+		) !important;
 	}
 
 	.wp-block-latest-comments__comment-author {
@@ -32,9 +34,12 @@
 	}
 
 	.wp-block-latest-comments__comment-excerpt {
+
 		p {
 			font-family: var(--wp--preset--font-family--body);
 			font-size: var(--wp--preset--font-size--xs);
 		}
 	}
 }
+
+/* stylelint-enable selector-class-pattern, declaration-no-important */
