--- a/assets/scss/blocks/core/search.scss
+++ b/assets/scss/blocks/core/search.scss
@@ -1,8 +1,8 @@
-@use '../../abstracts/responsive-mixins';
+/* stylelint-disable selector-class-pattern, declaration-no-important */
 
-/* Search
----------------------------------------- */
+/* Search */
 .wp-block-search {
+
 	.wp-block-search__inside-wrapper {
 		border-radius: 4px;
 		border: 2px solid transparent;
@@ -33,12 +33,21 @@
 		}
 	}
 
-	&.wp-block-search__button-only {
-		&.wp-block-search__searchfield-hidden {
-			.wp-block-search__inside-wrapper {
-				border-color: transparent;
+	&.wp-block-search__button-inside {
+
+		.wp-block-search__inside-wrapper {
+			border-color: var(--wp--preset--color--grey-300);
+			padding: 0.625rem 0.875rem 0.625rem 0;
+			position: relative;
+
+			.wp-block-search__input {
+				border: none !important;
+				padding: 0 1rem;
 			}
 		}
+	}
+
+	&.wp-block-search__button-only {
 
 		.wp-block-search__inside-wrapper {
 			align-items: center;
@@ -46,33 +55,31 @@
 			position: relative;
 
 			.wp-block-search__input {
-				border: none !important; /* stylelint-disable-line declaration-no-important */
+				border: none !important;
 			}
 
 			.wp-block-search__button {
 				max-width: inherit;
 			}
 		}
-	}
 
-	&.wp-block-search__button-inside {
-		.wp-block-search__inside-wrapper {
-			border-color: var(--wp--preset--color--grey-300);
-			padding: 0.625rem 0.875rem 0.625rem 0;
-			position: relative;
+		&.wp-block-search__searchfield-hidden {
 
-			.wp-block-search__input {
-				border: none !important; /* stylelint-disable-line declaration-no-important */
-				padding: 0 1rem;
+			.wp-block-search__inside-wrapper {
+				border-color: transparent;
 			}
 		}
 	}
 
 	&.wp-block-search__button-outside {
+
 		.wp-block-search__inside-wrapper {
+
 			.wp-block-search__input {
 				padding: 0.625rem 1rem;
 			}
 		}
 	}
 }
+
+/* stylelint-enable selector-class-pattern */
