--- a/style.css
+++ b/style.css
@@ -5,11 +5,13 @@ Author: WebDevStudios
 Author URI: https://webdevstudios.com/
 Description: Meet WDS BT, a stylish block theme, tailored for WordPress, featuring native blocks and site editor compatibility.
 Requires at least: 6.4
-Tested up to: 6.4
+Tested up to: 6.7
 Requires PHP: 8.2
-Version: 1.0.0
+Version: 1.1.0
 License: GNU General Public License v3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: wdsbt
 Tags: block-patterns, block-styles, editor-style, full-site-editing, translation-ready
+
+Tested with PHP 8.3
 */
