--- a/assets/scss/template-parts/footer.scss
+++ b/assets/scss/template-parts/footer.scss
@@ -1,6 +1,7 @@
 /* -- footer -- */
 
 .site-footer {
+	background-color: var(--wp--preset--color--black);
 	border-top: 1px solid var(--wp--preset--color--grey-400);
 	padding-bottom: 0;
 	padding-top: 0;
