--- a/assets/scss/blocks/core/cover.scss
+++ b/assets/scss/blocks/core/cover.scss
@@ -16,9 +16,7 @@
 	}
 
 	.wp-block-buttons {
-		margin-top: var(
-			--wp--preset--spacing--30
-		) !important; /* stylelint-disable-line declaration-no-important */
+		margin-top: var(--wp--preset--spacing--30);
 
 		.wp-block-button {
 
