--- a/assets/scss/blocks/core/cover.scss
+++ b/assets/scss/blocks/core/cover.scss
@@ -21,7 +21,7 @@
 		.wp-block-button {
 
 			.wp-block-button__link {
-				border-radius: 6px !important; /* stylelint-disable-line declaration-no-important */
+				border-radius: 6px;
 			}
 		}
 	}
