Update font paths in scss files

--- a/assets/scss/base/options.scss
+++ b/assets/scss/base/options.scss
@@ -1,6 +1,6 @@
 // Theme Options
 
-.wp-theme-wds-bt {
+.tools_page_wdsbt-settings {
 	background: var(--wp--preset--color--white);
 	border: 1px solid var(--wp--preset--color--grey-600);
 	padding: 1.5rem;
