--- a/assets/scss/blocks/core/post-author.scss
+++ b/assets/scss/blocks/core/post-author.scss
@@ -3,14 +3,14 @@
 /* -- post-author -- */
 
 .wp-block-post-author {
-
 	.wp-block-post-author__byline {
 		font-family: var(--wp--preset--font-family--body);
 		font-size: var(--wp--preset--font-size--xxs);
+		margin-bottom: var(--wp--preset--spacing--20);
+		margin-top: var(--wp--preset--spacing--20);
 	}
 
 	.wp-block-post-author__name {
-
 		a {
 			font-family: var(--wp--preset--font-family--headline);
 			font-size: var(--wp--preset--font-size--m);
