--- a/assets/scss/blocks/core/latest-posts.scss
+++ b/assets/scss/blocks/core/latest-posts.scss
@@ -56,39 +56,32 @@
 
 		.wp-block-latest-posts__post-title {
 			color: var(--wp--preset--color--black);
-			display: inline-block;
 			font-family: var(--wp--preset--font-family--headline);
-			font-size: 1.375rem;
-			font-weight: 600;
+			font-size: var(--wp--preset--font-size--s);
+			margin-bottom: var(--wp--preset--spacing--20);
 			margin-top: var(--wp--preset--spacing--20);
-			padding: 0.5rem 1.875rem 0;
-			text-decoration: none;
-
-			&:hover,
-			&:focus {
-				color: var(--wp--preset--color--primary-500);
-			}
 		}
 
 		.wp-block-latest-posts__post-author,
 		.wp-block-latest-posts__post-date {
 			color: var(--wp--preset--color--black);
-			display: block;
 			font-family: var(--wp--preset--font-family--body);
-			font-size: 0.8125em;
-			margin-top: 0 !important; /* stylelint-disable-line declaration-no-important */
-			padding: 0.5rem 1.875rem 0;
+			font-size: var(--wp--preset--font-size--xs);
+			margin-bottom: var(--wp--preset--spacing--20);
+			margin-top: var(--wp--preset--spacing--20);
 		}
 
 		.wp-block-latest-posts__post-excerpt {
-			color: var(--wp--preset--color--grey-500);
-			margin-top: 0;
-			padding: 0.5rem 1.875rem;
+			color: var(--wp--preset--color--primary-500);
+			font-family: var(--wp--preset--font-family--body);
+			font-size: var(--wp--preset--font-size--xs);
+			margin-bottom: var(--wp--preset--spacing--20);
+			margin-top: var(--wp--preset--spacing--20);
 
 			.wp-block-latest-posts__read-more {
 				color: var(--wp--preset--color--primary-500);
 				display: block;
-				font-family: var(--wp--preset--font-family--body);
+				font-family: var(--wp--preset--font-family--inter);
 				font-size: var(--wp--preset--font-size--xxs);
 				font-weight: 300;
 				padding-top: 1rem;
@@ -104,7 +97,6 @@
 	}
 
 	&.is-grid {
-
 		li {
 			padding-left: 0;
 
